--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npx -n --experimental-vm-modules jest",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "start": "cross-env NODE_ENV=development webpack serve --mode development",
     "watch": "webpack --watch",
     "serve": "webpack serve"
   },
@@ -21,19 +22,30 @@
   },
   "homepage": "https://github.com/TimurDavlet/frontend-project-lvl3#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.6.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.0",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.6",
+    "postcss-loader": "^6.2.1",
+    "sass-loader": "^12.4.0",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "jest": "^27.5.0"
   }
 }
