--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "jest": "^27.5.0"
+    "jest": "^27.5.0",
+    "on-change": "^4.0.0",
+    "url": "^0.11.0",
+    "yup": "^0.32.11"
   }
 }
