--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "i18next": "^21.6.11",
     "jest": "^27.5.0",
     "on-change": "^4.0.0",
     "url": "^0.11.0",
