--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "i18next": "^21.6.11",
     "jest": "^27.5.0",
     "on-change": "^4.0.0",
     "url": "^0.11.0",
+    "whatwg-fetch": "^3.6.2",
     "yup": "^0.32.11"
   }
 }
