--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "on-change": "^4.0.0",
     "url": "^0.11.0",
     "whatwg-fetch": "^3.6.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "lodash": "^4.17.21"
   }
 }
