--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "bugs": {
     "url": "https://github.com/TimurDavlet/frontend-project-lvl3/issues"
   },
+  "type": "module",
   "homepage": "https://github.com/TimurDavlet/frontend-project-lvl3#readme",
   "devDependencies": {
     "@babel/core": "^7.17.2",
