--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/TimurDavlet/frontend-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/TimurDavlet/frontend-project-lvl3/actions)",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "npx -n --experimental-vm-modules jest",
     "build": "cross-env NODE_ENV=production webpack --mode production",
