--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/TimurDavlet/frontend-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/TimurDavlet/frontend-project-lvl3/actions)",
   "main": "./src/index.js",
+  "type": "module",
   "scripts": {
     "test": "npx -n --experimental-vm-modules jest",
-    "build": "cross-env NODE_ENV=production webpack --mode production",
-    "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "start": "cross-env NODE_ENV=development webpack serve --mode development",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "build": "rm -rf dist && cross-env NODE_ENV=production npx webpack"
   },
   "repository": {
     "type": "git",
@@ -22,37 +19,45 @@
   },
   "homepage": "https://github.com/TimurDavlet/frontend-project-lvl3#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.2",
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.3",
-    "clean-webpack-plugin": "^4.0.0",
+    "@testing-library/dom": "^8.11.4",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/user-event": "^14.0.0-beta.13",
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-module-utils": "^2.7.3",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-scope": "^6.0.0",
+    "eslint-visitor-keys": "^3.3.0",
     "html-webpack-plugin": "^5.5.0",
-    "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.5.3",
-    "node-sass": "^7.0.1",
-    "postcss": "^8.4.6",
+    "msw": "^0.39.2",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
-    "sass-loader": "^12.4.0",
-    "webpack": "^5.68.0",
+    "read-package-json-fast": "^2.0.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "source-map-loader": "^3.0.1",
+    "style-loader": "^3.3.1",
+    "url": "^0.11.0",
+    "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "workbox-webpack-plugin": "^6.4.2"
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "i18next": "^21.6.11",
-    "jest": "^27.5.0",
+    "i18next": "^21.6.14",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.0",
-    "url": "^0.11.0",
-    "whatwg-fetch": "^3.6.2",
-    "yup": "^0.32.11",
-    "lodash": "^4.17.21"
+    "yup": "^0.32.11"
   }
 }
